# epgdump_rust

./: Cargo.toml  README.md  install.sh
conf/: tsid.conf
src/: arib.rs  eit.rs  epgdump.rs  sdt.rs  ts.rs
